--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,4 @@
-<a href="index.html">Back</a>
+<a href="index.html">Home</a>    <a href="page1.html">Previous</a>
 <br>
 <br>
 Welcome to page 2
@@ -9,3 +9,6 @@ Welcome to page 2
 
 The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
 </p>
+<br>
+<br>
+<a href="page3.html">Next</a>
