--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,7 @@
-<a href="index.html">Home</a>    <a href="page1.html">Previous</a>
+<a href="index.html">Home</a> 
+<br>
+<br>
+<a href="page1.html">Previous</a>
 <br>
 <br>
 Welcome to page 2
