--- a/page3.html
+++ b/page3.html
@@ -1,4 +1,7 @@
-<a href="index.html">Home</a>    <a href="page2.html">Previous</a>
+<a href="index.html">Home</a>  
+<br>
+<br>
+<a href="page2.html">Previous</a>
 <br>
 <br>
 Welcome to page 3
