--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<h1>Home Page<h1>
+  <br>
+  <br>
 <a href="page1.html">page1</a>
 <br>
+ <br>
 <a href="page2.html">page2</a>
+  <br>
+ <br>
+<a href="page3.html">page3</a>
